[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/UI/Convictions.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Convictions" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 15.0
margin_right = -17.0
margin_bottom = -15.0

[node name="ConvictionLeftPanel" type="Panel" parent="HBoxContainer"]
margin_right = 305.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 12 )

[node name="ConvictionLeft" type="VBoxContainer" parent="HBoxContainer/ConvictionLeftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="HBoxContainer/ConvictionLeftPanel/ConvictionLeft"]
margin_right = 305.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Convictions"
align = 1

[node name="ConvictionList" type="ItemList" parent="HBoxContainer/ConvictionLeftPanel/ConvictionLeft"]
margin_top = 18.0
margin_right = 305.0
margin_bottom = 117.0
items = [ "Conviction 1", null, false, "Conviciton 2", null, false, "Conviciton 3", null, false, "Conviciton 3", null, false, "Conviciton 4", null, false ]
auto_height = true

[node name="ConvictionRightPanel" type="Panel" parent="HBoxContainer"]
margin_left = 309.0
margin_right = 614.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 12 )

[node name="ConvictionDetails" type="VBoxContainer" parent="HBoxContainer/ConvictionRightPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ConvictionDetailPanel" type="Panel" parent="HBoxContainer/ConvictionRightPanel/ConvictionDetails"]
margin_right = 305.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ConvictionRightPanel/ConvictionDetails/ConvictionDetailPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DetailName" type="HBoxContainer" parent="HBoxContainer/ConvictionRightPanel/ConvictionDetails/ConvictionDetailPanel/VBoxContainer"]
margin_right = 305.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/ConvictionRightPanel/ConvictionDetails/ConvictionDetailPanel/VBoxContainer/DetailName"]
margin_right = 42.0
margin_bottom = 14.0
text = "Name:"

[node name="Value" type="Label" parent="HBoxContainer/ConvictionRightPanel/ConvictionDetails/ConvictionDetailPanel/VBoxContainer/DetailName"]
margin_left = 46.0
margin_right = 155.0
margin_bottom = 14.0
text = "Conviction Name"

[node name="DetailAction" type="HBoxContainer" parent="HBoxContainer/ConvictionRightPanel/ConvictionDetails/ConvictionDetailPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 305.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/ConvictionRightPanel/ConvictionDetails/ConvictionDetailPanel/VBoxContainer/DetailAction"]
margin_right = 87.0
margin_bottom = 14.0
text = "Battle Action:"

[node name="Value" type="Label" parent="HBoxContainer/ConvictionRightPanel/ConvictionDetails/ConvictionDetailPanel/VBoxContainer/DetailAction"]
margin_left = 91.0
margin_right = 125.0
margin_bottom = 14.0
text = "None"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ConvictionRightPanel/ConvictionDetails/ConvictionDetailPanel/VBoxContainer"]
margin_top = 36.0
margin_right = 305.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/ConvictionRightPanel/ConvictionDetails/ConvictionDetailPanel/VBoxContainer/HBoxContainer"]
margin_right = 49.0
margin_bottom = 294.0
size_flags_vertical = 7
text = "Details:"
align = 1

[node name="DetailBody" type="RichTextLabel" parent="HBoxContainer/ConvictionRightPanel/ConvictionDetails/ConvictionDetailPanel/VBoxContainer/HBoxContainer"]
margin_left = 53.0
margin_right = 305.0
margin_bottom = 294.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus vulputate eu scelerisque felis imperdiet proin fermentum leo vel. Mauris vitae ultricies leo integer malesuada. Dictum non consectetur a erat nam. Pellentesque elit eget gravida cum sociis natoque."

[connection signal="item_selected" from="HBoxContainer/ConvictionLeftPanel/ConvictionLeft/ConvictionList" to="." method="_on_ConvictionList_item_selected"]
